<resources>
    <string name="app_name">Tellerium</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">SignIn</string>
    <string name="no_account_yet">Don\'t have an account?</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mobile">Mobile</string>
    <string name="register">SignUp</string>
    <string name="title_api_error">Something Went Wrong</string>
    <string name="processing">Please Wait</string>
    <string name="wrong_credential">Wrong email or password. Try Again!</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="registeration_error">We\'re sorry yoou cannot register at the moment. Please, try again!!</string>
    <string name="search_farmer">Search by name or lga</string>
    <string name="farmers_full_name">%s %s</string>
    <string name="farmers_image">%s%s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_farm_details">Capture Farm Details</string>
    <string name="personal">Personal</string>
    <string name="identification">Identification</string>
    <string name="farm_capture">Farm</string>
    // This is sensitive and shouldn't be here, For this task i've allowed it
    // Remember to hide this key
    <string name="google_maps_key" translatable="false">AIzaSyDZfqcOO19TAdGmupEa1sV3MCBJqRwLfbQ</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="new_farmer_registration">New Farmer Registration</string>
    <string name="dashboard">View Dashboard</string>
    <string name="total_farmer">%d</string>
    <string name="update_profile">Update Profile</string>
    <string name="registration_number">Registration Number</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="marital_status">Marital Status</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="city">City</string>
    <string name="lga">LGA</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
</resources>